added paragraph into index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Hello GIT !</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum impedit omnis perspiciatis, magni, quaerat aliquam, facere molestias assumenda ipsam earum numquam? Numquam quia atque laboriosam eos optio quo necessitatibus tempora.
+    </p>
 </body>
 </html>
